--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@bonbons/contracts",
   "version": "1.0.0",
   "description": "@Bonbons/contracts",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
     "@types/koa-bodyparser": "^4.2.0",
     "@types/koa-router": "^7.0.28",
     "tslint": "^5.10.0",
+    "ts-loader": "^4.4.1",
     "typescript": "^2.9.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3"
