--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,11 @@
     "url": "https://github.com/ws-Bonbons/contracts/issues"
   },
   "homepage": "https://github.com/ws-Bonbons/contracts#readme",
+  "dependencies": {
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0"
+  },
   "devDependencies": {
     "@types/node": "^10.3.2",
     "@types/koa": "^2.0.46",
