--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bonbons/contracts",
-  "version": "1.0.4",
+  "version": "1.0.5-beta",
   "description": "@Bonbons/contracts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
