--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,4 @@
 {
-  "compilerOptions": {
-    "sourceMap": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "esModuleInterop": true,
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "./dist",
-    "lib": [
-      "es2016",
-      "es2015"
-    ]
-  }
+  "extends": "./tsconfig.build.json",
+  "compilerOptions": {}
 }
