--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bonbons/contracts",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "@Bonbons/contracts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -24,14 +24,14 @@
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
-    "@types/koa": "^2.0.46",
-    "@types/koa-bodyparser": "^4.2.0",
-    "@types/koa-router": "^7.0.28",
-    "@types/node": "^10.5.2",
-    "ts-loader": "^4.4.1",
-    "tslint": "^5.10.0",
+    "@types/koa": "2.0.46",
+    "@types/koa-bodyparser": "4.2.0",
+    "@types/koa-router": "7.0.28",
+    "@types/node": "10.5.2",
+    "ts-loader": "4.4.1",
+    "tslint": "5.10.0",
     "typescript": "^2.9.1",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.3"
+    "webpack": "4.16.0",
+    "webpack-cli": "3.0.3"
   }
 }
