--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/ws-Bonbons/contracts#readme",
   "dependencies": {
-    "koa": "^2.5.2",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
+    "koa": "2.5.2",
+    "koa-bodyparser": "4.2.1",
+    "koa-router": "7.4.0"
   },
   "devDependencies": {
     "@types/koa": "2.0.46",
@@ -30,7 +30,7 @@
     "@types/node": "10.5.2",
     "ts-loader": "4.4.1",
     "tslint": "5.10.0",
-    "typescript": "^2.9.1",
+    "typescript": "3.0.1",
     "webpack": "4.16.0",
     "webpack-cli": "3.0.3"
   }
