--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bonbons/contracts",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "@Bonbons/contracts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -19,15 +19,17 @@
   },
   "homepage": "https://github.com/ws-Bonbons/contracts#readme",
   "dependencies": {
+    "@types/axios": "0.14.0",
+    "@types/koa": "2.0.46",
+    "@types/koa-bodyparser": "4.2.0",
+    "@types/koa-router": "7.0.28",
+    "@types/node": "10.5.2",
+    "axios": "0.18.0",
     "koa": "2.5.2",
     "koa-bodyparser": "4.2.1",
     "koa-router": "7.4.0"
   },
   "devDependencies": {
-    "@types/koa": "2.0.46",
-    "@types/koa-bodyparser": "4.2.0",
-    "@types/koa-router": "7.0.28",
-    "@types/node": "10.5.2",
     "ts-loader": "4.4.1",
     "tslint": "5.10.0",
     "typescript": "3.0.1",
